2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (data_read_byte_raw): Factor out magic ports to...
	(data_read_magic_port): ...this new function.
	(data_write_byte_raw): Factor out magic ports to...
	(data_write_magic_port): ...this new function.
	(do_step): Move TICKS_PORT handling to data_read_magic_port.
	* avrtest.h (FIRST_MAGIC_IN_PORT, LAST_MAGIC_IN_PORT)
	(FIRST_MAGIC_OUT_PORT, LAST_MAGIC_OUT_PORT): New defines.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (execute): Merge two loops to one.  Make inline.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (leave) [-runtime]: Show instructions per ms.
	(instr_count): New variable.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (-no-ticks): Remove option and replace by...
	(-ticks): ...this one with reversed logic.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (avr_op_*): Rename to func_*.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (avr_op_index_*): Rename to ID_*.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (CX): New define depending on xmega.
	* avr-insns.def (CBI, EICALL, ICALL, LDS, PUSH, RCALL, SBI)
	(SBIC, SBIS): Use CX to adjust instruction timing for xmega.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (opcode_data): Rename to opcode_t.  Move .size and
	.cycles to the end of the structure.
	(opcode_func_array): Adjust initialization.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile: Build xmega executables and exit*.o per default.
	Strip all executables.
	(CFLAGS): Use -Os instead of -O3.
	(exit-xmega, all-xmega): Clean up.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (sys/time.h): New include.
	(flag_have_runtime, t_start): New variables.
	(time_sub): New function.
	(leave) [flag_have_runtime]: Print runtime.
	(parse_args) [-runtime]: New option.
	(usage): Document it.
	(main): Set t_start.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* COPYING: New file.